# gh-notifier

./: .gitignore  AGENTS.md  README.md  electron.vite.config.ts  eslint-style.js  eslint.config.js  eslint.config.mjs  package.json  tailwind.config.js  tsconfig.json  tsconfig.node.json  vitest.config.ts
.github/: AGENTS.md  copilot-instructions.md
db/migrations/: 001_initial.sql  002_projects.sql  003_notifications.sql  004_sync_metadata.sql  005_snooze.sql  005_thread_content.sql  006_filters.sql  007_routing_rules.sql  008_routing_rules_action.sql  009_drop_filters.sql  010_state_checked_at.sql  011_copilot_sessions.sql  012_copilot_source_github_only.sql  013_focus_watermark.sql  014_copilot_pinned_project.sql  015_resource_registry.sql  016_project_mcp_servers_soft_delete.sql  017_copilot_app_sessions.sql  018_todo_copilot_app_sessions.sql  019_drop_mcp_client_tables.sql  020_agent_todos.sql  021_copilot_app_sessions_observed.sql
docs/: mcp-server.md
requirements/: DESIGN.md  copilot.md  fetch-messages.md  milestones.md  prd.md  pre-release-owner-checklist.md  repo-filtering.md  terminal-state.md  testing.md
requirements/design/: Focus Hi-Fi.dc.html
scripts/: copy-prod-db.sh  generate-icons.sh  install-app.sh  install.sh  provision-model.ts  verify-focus.ts  verify-mcp.ts
src/: app.css  app.html  test-setup.ts
src-tauri/: Cargo.toml  rustfmt.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  db.rs  github.rs  lib.rs  main.rs  models.rs
(+300 files in other folders)
